Initial release of ui benchmark tests